--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
         <artifactId>jaxb-api</artifactId>
         <version>2.3.1</version>
     </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>RELEASE</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
 <build>
