added new options for user and made new classes for organization

--- a/src/resources/ButtonText.properties
+++ b/src/resources/ButtonText.properties
@@ -3,3 +3,7 @@ QuitButton=Quit
 PauseButton=Pause
 NextButton=Next
 LoadButton=Load New File
+SaveButton=Save
+Slider=slider
+GameDisplay=gameDisplay
+Title=title;
