--- a/src/resources/ObjectID.properties
+++ b/src/resources/ObjectID.properties
@@ -4,6 +4,11 @@ PauseButton=Pause
 NextButton=Next
 LoadButton=Load New File
 SaveButton=Save
+OkButtonText=OK
 Slider=slider
 GameDisplay=gameDisplay
 Title=title;
+BottomPanel=bottomPanel
+ButtonPanel=buttonPanel
+OkButton=okButton
+DataPanel=dataPanel
