Tested different configurations

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,5 +1,5 @@
-SimulationType=Percolation
+SimulationType=PredatorPrey
 Title=Game Of Life: Beehive
 Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=segTest.csv
+DataSourceCSV=ppTest.csv
