all merge conflicts solved

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,5 +1,5 @@
-SimulationType=GameOfLife
-Title=Game Of Life: Beehive
+SimulationType=PredatorPrey
+Title=Game Of Life: Beehives
 Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=GameOfLife_Blinker.csv
+DataSourceCSV=ppTest.csv
