--- a/src/resources/ObjectID.properties
+++ b/src/resources/ObjectID.properties
@@ -11,4 +11,10 @@ Title=title;
 BottomPanel=bottomPanel
 ButtonPanel=buttonPanel
 OkButton=okButton
-DataPanel=dataPanel
+TilePane=tilePane
+SliderBox=sliderBox
+Shark\ Image =SHARK
+Fish\ Image=FISH
+Pink\ Color=PINK
+Blue\ Color=BLUE
+Green\ Color=GREEN
