added images and paths

--- a/src/resources/ObjectID.properties
+++ b/src/resources/ObjectID.properties
@@ -13,8 +13,11 @@ ButtonPanel=buttonPanel
 OkButton=okButton
 TilePane=tilePane
 SliderBox=sliderBox
-Shark\ Image =SHARK
-Fish\ Image=FISH
+Shark\ Image =Images/Shark.png
+Fish\ Image=Images/Fish.png
 Pink\ Color=PINK
 Blue\ Color=BLUE
 Green\ Color=GREEN
+SharkDirectory=Images/Shark.png
+FishDirectory=Images/Fish.png
+
