changed images and visual styles

--- a/src/resources/ObjectID.properties
+++ b/src/resources/ObjectID.properties
@@ -11,13 +11,15 @@ Title=title;
 BottomPanel=bottomPanel
 ButtonPanel=buttonPanel
 OkButton=okButton
-TilePane=tilePane
+HBox=hBox
 SliderBox=sliderBox
-Shark\ Image =Images/Shark.png
-Fish\ Image=Images/Fish.png
+Shark\ Image =GridImages/shark.png
+Fish\ Image=GridImages/fish.png
+Water\ Image=GridImages/water.png
+Tree\ Image=GridImages/tree.png
+Burning\ Tree\ Image=GridImages/burningTree.png
+Grass\ Image=GridImages/grass.png
 Pink\ Color=PINK
 Blue\ Color=BLUE
 Green\ Color=GREEN
-SharkDirectory=Images/Shark.png
-FishDirectory=Images/Fish.png
 
