--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,5 +1,5 @@
-SimulationType=PredatorPrey
-Title=Game Of Life: Beehives
+SimulationType=GameOfLife
+Title=Game Of Life: Beehive
 Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=ppTest.csv
+DataSourceCSV=GameOfLife_Blinker.csv
