Added capability to save Title, Author, and Description for current simulation

--- a/src/resources/exceptionMessages.properties
+++ b/src/resources/exceptionMessages.properties
@@ -1,3 +1,4 @@
 InvalidSettingsFile=Invalid Simulation Settings File
 InvalidCSVFile=Invalid CSV File
 InvalidSimulation=Invalid Simulation Type
+UnableToSave=Unable To Save Current Simulation
