changed initial properties file

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -2,4 +2,4 @@ SimulationType=PredatorPrey
 Title=Game Of Life: Beehives
 Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=ppTest.csv
+DataSourceCSV=segTest.csv
