Added DataPanel button in ObjectID.properties

--- a/src/resources/ObjectID.properties
+++ b/src/resources/ObjectID.properties
@@ -6,6 +6,7 @@ LoadButton=Load New File
 SaveButton=Save
 OkButtonText=OK
 Slider=slider
+DataPanel=dataPanel
 GameDisplay=gameDisplay
 Title=title;
 BottomPanel=bottomPanel
