Refactored CellType to return types associated with certain simulations

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,7 +1,7 @@
-SimulationType=Percolation
+SimulationType=PredatorPrey
 Title=Game Of Life: Beehive
 Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=percolationTest.csv
-NeighborhoodPolicy=Cardinal
-EdgePolicy=KleinBottle
+DataSourceCSV=ppTest.csv
+NeighborhoodPolicy=Complete
+EdgePolicy=Finite
