refactored getEdgeTypeTorodial method

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,7 +1,7 @@
-SimulationType=PredatorPrey
+SimulationType=Percolation
 Title=Game Of Life: Beehive
 Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=ppTest.csv
-NeighborhoodPolicy=Complete
-EdgePolicy=Finite
+DataSourceCSV=percolationTest.csv
+NeighborhoodPolicy=Diagonal
+EdgePolicy=Torodial
