Added all csv files

--- a/src/resources/RockPaperScissors.properties
+++ b/src/resources/RockPaperScissors.properties
@@ -3,6 +3,6 @@ Title=Rock, Paper, Scissors
 Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
 Description=If the neighbor count is greater than a threshold value in the result that beats the\
    current cell then the current cell becomes the winner.
-DataSourceCSV=fireTest.csv
+DataSourceCSV=RockPaperScissors.csv
 NeighborhoodPolicy=Complete
 EdgePolicy=Finite
