--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,7 +1,8 @@
-SimulationType=SpreadingOfFire
-Title=Spreading of Fire
+SimulationType=Percolation
+Title=Percolation
 Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
-Description=Models the spread of fire based on a probability of neighboring trees catching fire.
-DataSourceCSV=SpreadingOfFire.csv
+Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
+  are full, the current neighbor becomes full.
+DataSourceCSV=Percolation.csv
 NeighborhoodPolicy=Cardinal
 EdgePolicy=Finite
