--- a/src/resources/Segregation.properties
+++ b/src/resources/Segregation.properties
@@ -3,6 +3,6 @@ Title=Schelling's Model of Segregation
 Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
 Description=There are 2 kinds of agents who may be dissatisfied with their location if a minimum \
   percentage of its neighbors are of the same race, and need to be moved to an empty location.
-DataSourceCSV=segTest.csv
+DataSourceCSV=Segregation.csv
 NeighborhoodPolicy=Complete
 EdgePolicy=Finite
