--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,8 +1,5 @@
-SimulationType=Percolation
-Title=Percolation
-Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
-Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
-  are full, the current neighbor becomes full.
-DataSourceCSV=Percolation.csv
-NeighborhoodPolicy=Cardinal
-EdgePolicy=Finite
+SimulationType=GameOfLife
+Title=Game Of Life: Beehive
+Author=Wikipedia Examples of Conway's Game of Life Patterns
+Description=Still-Life beehive that does not change from one generation to the next 
+DataSourceCSV=GameOfLife_Many.csv
