--- a/src/resources/randomizedSimulation.properties
+++ b/src/resources/randomizedSimulation.properties
@@ -4,3 +4,5 @@ Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
 Random=swapRandomizeGrid
 DataSourceCSV=GameOfLife_Block.csv
+NeighborhoodPolicy=Cardinal
+EdgePolicy=Finite
