Added option for no randomization

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -4,5 +4,6 @@ Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
 Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
   are full, the current neighbor becomes full.
 DataSourceCSV=Percolation.csv
-NeighborhoodPolicy=Cardinal
+NeighborhoodPolicy=Complete
 EdgePolicy=Finite
+Random=noRandomization
