--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,9 +1,9 @@
-SimulationType=Percolation
+SimulationType=PredatorPrey
 Title=Percolation
 Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
 Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
   are full, the current neighbor becomes full.
-DataSourceCSV=Percolation.csv
-NeighborhoodPolicy=Complete
-EdgePolicy=Finite
+DataSourceCSV=PredatorPrey.csv
+NeighborhoodPolicy=Diagonal
+EdgePolicy=KleinBottle
 Random=noRandomization
