Added SimulationGraph class

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -3,7 +3,7 @@ Title=Percolation
 Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
 Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
   are full, the current neighbor becomes full.
-DataSourceCSV=PredatorPrey.csv
+DataSourceCSV=ppTest.csv
 NeighborhoodPolicy=Diagonal
 EdgePolicy=KleinBottle
 Random=noRandomization
