added drop down options based on correct language chosen

--- a/src/languageresources/english.properties
+++ b/src/languageresources/english.properties
@@ -9,3 +9,7 @@ SAVE_FILE=Save Current Simulation
 Hexagon=Hexagon
 Triangle=Triangle
 Rectangle=Rectangle
+InitialOptions=Initial SetUp Screen
+CellChanges=Shark Image,Pink Color,Blue Color,Fish Image,Burning Tree Image,Tree Image,Water Image,Green Color,Grass Image
+Style=Dark,Light,Duke,UNC
+Shape=Triangle,Hexagon,Rectangle
