--- a/src/styleresources/ObjectID.properties
+++ b/src/styleresources/ObjectID.properties
@@ -16,4 +16,9 @@ Grass\ Image=GridImages/grass.png
 Pink\ Color=PINK
 Blue\ Color=BLUE
 Green\ Color=GREEN
+Initial\ Options=initOptions
+Dark=dark
+Light=light
+Duke=duke
+UNC=unc
 
