--- a/src/resources/exceptionMessages.properties
+++ b/src/resources/exceptionMessages.properties
@@ -2,3 +2,4 @@ InvalidSettingsFile=Invalid Simulation Settings File
 InvalidCSVFile=Invalid CSV File
 InvalidSimulation=Invalid Simulation Type
 UnableToSave=Unable To Save Current Simulation
+Error=Error!
