more refactoring to predator prey

--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -4,6 +4,6 @@ Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
 Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
   are full, the current neighbor becomes full.
 DataSourceCSV=ppTest.csv
-NeighborhoodPolicy=Diagonal
-EdgePolicy=KleinBottle
+NeighborhoodPolicy=Complete
+EdgePolicy=Finite
 Random=noRandomization
