fixed error in properties files

--- a/src/resources/Percolation.properties
+++ b/src/resources/Percolation.properties
@@ -1,6 +1,6 @@
 SimulationType=Percolation
 Title=Percolation
-Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
+Author=Umika Paul, Fernanda Rizo, Yasser Elmzoudi
 Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
   are full, the current neighbor becomes full.
 DataSourceCSV=Percolation.csv
