--- a/src/resources/SpreadingOfFire.properties
+++ b/src/resources/SpreadingOfFire.properties
@@ -1,6 +1,6 @@
 SimulationType=SpreadingOfFire
 Title=Spreading of Fire
-Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
+Author=Umika Paul, Fernanda Rizo, Yasser Elmzoudi
 Description=Models the spread of fire based on a probability of neighboring trees catching fire.
 DataSourceCSV=SpreadingOfFire.csv
 NeighborhoodPolicy=Diagonal
