--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,9 +1,9 @@
 SimulationType=PredatorPrey
 Title=Percolation
-Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
+Author=Umika Paul, Fernanda Rizo, Yasser Elmzoudi
 Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
   are full, the current neighbor becomes full.
-DataSourceCSV=ppTest.csv
-NeighborhoodPolicy=Complete
+DataSourceCSV=PredatorPrey.csv
+NeighborhoodPolicy=Cardinal
 EdgePolicy=Finite
 Random=noRandomization
