--- a/src/resources/RockPaperScissors.properties
+++ b/src/resources/RockPaperScissors.properties
@@ -1,6 +1,6 @@
 SimulationType=RockPaperScissors
 Title=Rock, Paper, Scissors
-Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
+Author=Umika Paul, Fernanda Rizo, Yasser Elmzoudi
 Description=If the neighbor count is greater than a threshold value in the result that beats the\
    current cell then the current cell becomes the winner.
 DataSourceCSV=RockPaperScissors.csv
