--- a/src/resources/Segregation.properties
+++ b/src/resources/Segregation.properties
@@ -1,6 +1,6 @@
 SimulationType=Segregation
 Title=Schelling's Model of Segregation
-Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
+Author=Umika Paul, Fernanda Rizo, Yasser Elmzoudi
 Description=There are 2 kinds of agents who may be dissatisfied with their location if a minimum \
   percentage of its neighbors are of the same race, and need to be moved to an empty location.
 DataSourceCSV=Segregation.csv
