Rock paper scissors test

--- a/src/resources/data.properties
+++ b/src/resources/data.properties
@@ -1,3 +1,4 @@
 TestSource=ppTest.csv
 PercolationGridTest=Percolation.csv
 PredatorPreyGridTest=PredatorPrey.csv
+RockPaperScissorsTest=RockPaperScissors.csv
