added tests for spreading of fire grid

--- a/src/resources/data.properties
+++ b/src/resources/data.properties
@@ -2,3 +2,5 @@ TestSource=ppTest.csv
 PercolationGridTest=Percolation.csv
 PredatorPreyGridTest=PredatorPrey.csv
 RockPaperScissorsTest=RockPaperScissors.csv
+SegregationGridTest=Segregation.csv
+SpreadingOfFireGridTest=SpreadingOfFire.csv
