Added valid and invalid SimulationSettingsReader test

--- a/testdata/validSimulationReading.properties
+++ b/testdata/validSimulationReading.properties
@@ -1,9 +1,8 @@
-SimulationType=PredatorPrey
-Title=Percolation
-Author=Umika Paul, Fernanda Ruiz, Yasser Elmzoudi
-Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
-  are full, the current neighbor becomes full.
-DataSourceCSV=validGrid.csv
-NeighborhoodPolicy=Diagonal
-EdgePolicy=KleinBottle
-Random=noRandomization
+SimulationType=a
+Title=b
+Author=c
+Description=d
+DataSourceCSV=e
+NeighborhoodPolicy=f
+EdgePolicy=g
+Random=h
