--- a/testdata/errorSimulationReading.properties
+++ b/testdata/errorSimulationReading.properties
@@ -1,8 +1,8 @@
-SimulationType=Percolation
-Title=Invalid Test
-Author=Yasser
-Description=Error in CSV File
-DataSourceCSV=invalidGrid.csv
-NeighborhoodPolicy=Invalid Test
-EdgePolicy=Invalid Test
-Random=Invalid Test
+SimulationType=
+Title=
+Author=
+Description=
+DataSourceCSV=
+NeighborhoodPolicy=
+EdgePolicy=
+Random=
