percolation cell tests

--- a/src/resources/data.properties
+++ b/src/resources/data.properties
@@ -1,4 +1,5 @@
 TestSource=ppTest.csv
+GameOfLifeGridTest=GameOfLife_Many.csv
 PercolationGridTest=Percolation.csv
 PredatorPreyGridTest=PredatorPrey.csv
 RockPaperScissorsTest=RockPaperScissors.csv
