fixed ability to load new simulation

--- a/src/languageresources/english.properties
+++ b/src/languageresources/english.properties
@@ -13,3 +13,5 @@ InitialOptions=Initial SetUp Screen
 CellChanges=Shark Image,Pink Color,Blue Color,Fish Image,Burning Tree Image,Tree Image,Water Image,Green Color,Grass Image
 Style=Dark,Light,Duke,UNC
 Shape=Triangle,Hexagon,Rectangle
+ShapeTranslation=Shape
+StyleTranslation=Style
