--- a/src/languageresources/french.properties
+++ b/src/languageresources/french.properties
@@ -13,3 +13,5 @@ InitialOptions=Écran de configuration initiale
 CellChanges=Shark Image,Pink Color,Blue Color,Fish Image,Burning Tree Image,Tree Image,Water Image,Green Color,Grass Image
 Style=Dark,Light,Duke,UNC
 Shape=Hexagone,Triangle,Rectangle
+ShapeTranslation=La Figura
+StyleTranslation=Le Style
