--- a/src/languageresources/spanish.properties
+++ b/src/languageresources/spanish.properties
@@ -13,3 +13,5 @@ InitialOptions=Pantalla de configuración inicial
 CellChanges=Shark Image,Pink Color,Blue Color,Fish Image,Burning Tree Image,Tree Image,Water Image,Green Color,Grass Image
 Style=Dark,Light,Duke,UNC
 Shape=Hexágono,Triángulo,Rectángulo
+ShapeTranslation=Tipo
+StyleTranslation=Modo
