--- a/src/resources/GameOfLife.properties
+++ b/src/resources/GameOfLife.properties
@@ -2,6 +2,7 @@ SimulationType=GameOfLife
 Title=Game Of Life: Beehive
 Author=Wikipedia Examples of Conway's Game of Life Patterns
 Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=GameOfLife_Beehive.csv
+DataSourceCSV=GameOfLife_Blinker.csv
 NeighborhoodPolicy=Diagonal
 EdgePolicy=Finite
+Random=noRandomization
