added lang based second dialog

--- a/src/languageresources/french.properties
+++ b/src/languageresources/french.properties
@@ -11,7 +11,7 @@ Triangle=Triangle
 Rectangle=Rectangle
 InitialOptions=Écran de configuration initiale
 CellChanges=Shark Image,Pink Color,Blue Color,Fish Image,Burning Tree Image,Tree Image,Water Image,Green Color,Grass Image
-Style=Dark,Light,Duke,UNC
-Shape=Hexagone,Triangle,Rectangle
 ShapeTranslation=La Figura
 StyleTranslation=Le Style
+Le\ Style=Dark,Light,Duke,UNC
+La\ Figura=Hexagone,Triangle,Rectangle
