--- a/src/languageresources/spanish.properties
+++ b/src/languageresources/spanish.properties
@@ -11,7 +11,7 @@ Triangle=Triángulo
 Rectangle=Rectángulo
 InitialOptions=Pantalla de configuración inicial
 CellChanges=Shark Image,Pink Color,Blue Color,Fish Image,Burning Tree Image,Tree Image,Water Image,Green Color,Grass Image
-Style=Dark,Light,Duke,UNC
-Shape=Hexágono,Triángulo,Rectángulo
 ShapeTranslation=Tipo
 StyleTranslation=Modo
+Modo=Dark,Light,Duke,UNC
+Tipo=Hexágono,Triángulo,Rectángulo
