added ability to change style modes and changed data dialog to correct lang

--- a/src/LanguageResources/spanish.properties
+++ b/src/LanguageResources/spanish.properties
@@ -1,3 +1,6 @@
+Title=Title
+Author=Autor
+Description=Descripción
 ResumeButton=Continuar
 QuitButton=Cerrar
 PauseButton=Parar
@@ -9,9 +12,14 @@ SAVE_FILE=Guardar simulación actual
 Hexagon=Hexágono
 Triangle=Triángulo
 Rectangle=Rectángulo
+Duke=Duke
+UNC=UNC
+Dark=Oscuro
+Light=Bajito
+Default=Normal
 InitialOptions=Pantalla de configuración inicial
 CellChanges=Shark Image,Pink Color,Blue Color,Fish Image,Burning Tree Image,Tree Image,Water Image,Green Color,Grass Image
 ShapeTranslation=Tipo
 StyleTranslation=Modo
-Modo=Dark,Light,Duke,UNC
+Modo=Oscuro,Bajito,UNC,Duke,Normal
 Tipo=Hexágono,Triángulo,Rectángulo
