added graph and reset button to screen

--- a/src/LanguageResources/english.properties
+++ b/src/LanguageResources/english.properties
@@ -1,6 +1,8 @@
 Author=Author
 Title=Title
 Description=Description
+GraphButton=Graph Button
+ResetButton=Reset
 ResumeButton=Resume
 QuitButton=Quit
 PauseButton=Pause
