--- a/src/LanguageResources/french.properties
+++ b/src/LanguageResources/french.properties
@@ -1,6 +1,8 @@
 Title=Nom
 Author=Auteur
 Description=Description
+GraphButton=Le Graphique
+ResetButton=Réinitialiser
 ResumeButton=Continuer
 QuitButton=Proche
 PauseButton=Arrêtez
