--- a/src/LanguageResources/spanish.properties
+++ b/src/LanguageResources/spanish.properties
@@ -1,6 +1,8 @@
 Title=Title
 Author=Autor
 Description=Descripción
+GraphButton=Gráfico
+ResetButton=Reiniciar
 ResumeButton=Continuar
 QuitButton=Cerrar
 PauseButton=Parar
