--- a/src/StyleResources/ObjectID.properties
+++ b/src/StyleResources/ObjectID.properties
@@ -6,6 +6,9 @@ BottomPanel=bottomPanel
 ButtonPanel=buttonPanel
 OkButton=okButton
 HBox=hBox
+OtherButton=otherButton
+OtherBox=otherBox
+Title=title
 SliderBox=sliderBox
 Shark\ Image =GridImages/shark.png
 Fish\ Image=GridImages/fish.png
