spreading of fire gif

--- a/src/resources/GameOfLife.properties
+++ b/src/resources/GameOfLife.properties
@@ -1,8 +1,8 @@
 SimulationType=GameOfLife
-Title=Game Of Life: Beehive
+Title=Game Of Life: Many
 Author=Wikipedia Examples of Conway's Game of Life Patterns
-Description=Still-Life beehive that does not change from one generation to the next 
-DataSourceCSV=GameOfLife_Blinker.csv
-NeighborhoodPolicy=Diagonal
+Description=Simulation that changes from one generation to the next 
+DataSourceCSV=GameOfLife_Many.csv
+NeighborhoodPolicy=Complete
 EdgePolicy=Finite
 Random=noRandomization
