--- a/src/resources/PredatorPrey.properties
+++ b/src/resources/PredatorPrey.properties
@@ -6,3 +6,4 @@ Description=Model of predators feeding on adjacent prey and are dependent on pre
 DataSourceCSV=PredatorPrey.csv
 NeighborhoodPolicy=Cardinal
 EdgePolicy=Finite
+Random=noRandomization
