--- a/src/resources/RockPaperScissors.properties
+++ b/src/resources/RockPaperScissors.properties
@@ -6,3 +6,4 @@ Description=If the neighbor count is greater than a threshold value in the resul
 DataSourceCSV=RockPaperScissors.csv
 NeighborhoodPolicy=Complete
 EdgePolicy=Finite
+Random=noRandomization
