--- a/src/resources/Segregation.properties
+++ b/src/resources/Segregation.properties
@@ -6,3 +6,4 @@ Description=There are 2 kinds of agents who may be dissatisfied with their locat
 DataSourceCSV=Segregation.csv
 NeighborhoodPolicy=Complete
 EdgePolicy=Finite
+Random=noRandomization
