--- a/src/resources/SpreadingOfFire.properties
+++ b/src/resources/SpreadingOfFire.properties
@@ -5,3 +5,4 @@ Description=Models the spread of fire based on a probability of neighboring tree
 DataSourceCSV=SpreadingOfFire.csv
 NeighborhoodPolicy=Diagonal
 EdgePolicy=Finite
+Random=noRandomization
