--- a/src/resources/initialSimulationSettings.properties
+++ b/src/resources/initialSimulationSettings.properties
@@ -1,8 +1,7 @@
 SimulationType=SpreadingOfFire
-Title=Percolation
+Title=Spreading of Fire
 Author=Umika Paul, Fernanda Rizo, Yasser Elmzoudi
-Description=Percolation is the process of a liquid slowly passing through a filter; if neighbors \
-  are full, the current neighbor becomes full.
+Description=Models the spread of fire based on a probability of neighboring trees catching fire.
 DataSourceCSV=SpreadingOfFire.csv
 NeighborhoodPolicy=Cardinal
 EdgePolicy=Finite
