--- a/src/resources/Percolation.properties
+++ b/src/resources/Percolation.properties
@@ -5,4 +5,5 @@ Description=Percolation is the process of a liquid slowly passing through a filt
   are full, the current neighbor becomes full.
 DataSourceCSV=Percolation.csv
 NeighborhoodPolicy=Cardinal
-EdgePolicy=Finite
+EdgePolicy=Torodial
+Random=noRandomization
