Changes to properties files

--- a/src/resources/Percolation.properties
+++ b/src/resources/Percolation.properties
@@ -5,5 +5,5 @@ Description=Percolation is the process of a liquid slowly passing through a filt
   are full, the current neighbor becomes full.
 DataSourceCSV=Percolation.csv
 NeighborhoodPolicy=Cardinal
-EdgePolicy=Torodial
+EdgePolicy=KleinBottle
 Random=noRandomization
