Added tests for CSVWriter

--- a/src/resources/data.properties
+++ b/src/resources/data.properties
@@ -5,3 +5,4 @@ PredatorPreyGridTest=PredatorPrey.csv
 RockPaperScissorsTest=RockPaperScissors.csv
 SegregationGridTest=Segregation.csv
 SpreadingOfFireGridTest=SpreadingOfFire.csv
+InvalidCSVTest = invalidGrid.csv
