--- a/src/StyleResources/ObjectID.properties
+++ b/src/StyleResources/ObjectID.properties
@@ -1,7 +1,14 @@
 Slider=slider
 DataPanel=dataPanel
 GameDisplay=gameDisplay
-Title=title;
+ResetButton=resetButton
+GraphButton=graphButton
+LoadButton=loadButton
+QuitButton=quitButton
+ResumeButton=resumeButton
+NextButton=nextButton
+PauseButton=pauseButton
+SaveButton=SaveButton
 BottomPanel=bottomPanel
 ButtonPanel=buttonPanel
 OkButton=okButton
